--- a/css/custom.css
+++ b/css/custom.css
@@ -9,7 +9,7 @@ em {
 
 p {
 	color: #000;
-	font-size: 1.3em;
+	font-size: 1.6em;
 	font-family: "Quaver Serif";
 }
 
@@ -17,10 +17,9 @@ a {
 	color: #d3f62a;
 }
 
-.button.small {
-	font-family: "Quaver Serif";
+button {
 	font-size: 1em;
-	padding-top: 0.9375rem;
+	width: 200px;
 }
 
 h1 {
