edited text, added margin to bottom of body, created gh-pages

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,6 @@
 body {
 	background: #fff;
+	margin-bottom: 5%;
 }
 
 em {
@@ -75,6 +76,17 @@ h3 {
 	font-family: "Quaver Serif";
 	src: url('../fonts/QuaverSerif.otf');
 }
+
+
+
+
+
+
+
+
+
+
+
 
 
 /*label {
