--- a/css/custom.css
+++ b/css/custom.css
@@ -211,8 +211,8 @@ h3 {
 
 section{
 		float: left;
-		padding-top: 50px;
-		padding-bottom: 100px;
+		/*padding-top: 50px;
+		padding-bottom: 100px;*/
 		width: 100%;
 		padding-left:0;
 		padding-right:0;
@@ -221,7 +221,7 @@ section{
 #icon-wrapper{
 	width:100%;
 	float:left;
-	height:300px;
+	height: 225px;
 }
 
 .icons {
